CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT("love-nuklear" C)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
FIND_PACKAGE(LuaJIT REQUIRED)

SET(LIB_NAME "nuklear")

ADD_LIBRARY(
	"${LIB_NAME}"
	MODULE
	src/nuklear/nuklear.h
	src/nuklear_love.c
)

TARGET_INCLUDE_DIRECTORIES(
	"${LIB_NAME}"
	PUBLIC
	"${LUA_INCLUDE_DIR}"
)

TARGET_LINK_LIBRARIES(
	"${LIB_NAME}"
	${LUA_LIBRARIES}
)

SET_TARGET_PROPERTIES("${LIB_NAME}" PROPERTIES PREFIX "")

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}" CACHE PATH "..." FORCE)
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

INSTALL(TARGETS "${LIB_NAME}" DESTINATION .)
